# Bartolina

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  bartolina.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: bartolina_ci.yml  bartolina_py37.yml  bartolina_py38.yml  bartolina_py39.yml
bartolina/: __init__.py  bartolina.py  core.py
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: bartolina.rst  modules.rst
tests/: __init__.py  conftest.py  pytest.ini  test_integration.py  test_tests.py  test_unit.py
tests/data/: full_dmh.joblib.pkl  sample_SDSS.joblib.pkl  sample_dmh.joblib.pkl
